# Novice2025_WebServer

./: README.md
cgi-bin/: ai-chat.cgi  autogen-multi-agent.cgi  code-generator.cgi  thai-recipe-expert.cgi
resources/: 403.html  404.html  index.html
src/: CMakeLists.txt  main.cpp
src/core/: epoll.cpp  epoller.h  threadpool.h  webserver.cpp  webserver.h
src/http/: cgi_handler.cpp  cgi_handler.h  http_connection.cpp  http_connection.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h
src/utils/: buffer.cpp  buffer.h  date_cache.h  timer.cpp  timer.h  unique_fd.h
tests/: clean_cmake.sh  collect_source_code.sh  test_with_cmake.sh
webbench-1.5/: CMakeLists.txt  build_webbench.sh  webbench.c
